--- a/.github/workflows/frontend-cd.yml
+++ b/.github/workflows/frontend-cd.yml
@@ -70,6 +70,18 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-session-token: ${{secrets.AWS_SESSION_TOKEN}}
+          aws-region: us-east-1
+  
+      - name: Login to Amazon 
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v2
+
       - name: Configure kubectl
         run: |
           aws eks update-kubeconfig --region us-east-1 --name movie-pictures
