--- a/.github/workflows/frontend-cd.yml
+++ b/.github/workflows/frontend-cd.yml
@@ -66,22 +66,6 @@ jobs:
           docker push 760216051599.dkr.ecr.us-east-1.amazonaws.com/$REPO_NAME:$IMAGE_TAG
         working-directory: ./starter/frontend
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v2
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-session-token: ${{secrets.AWS_SESSION_TOKEN}}
-          aws-region: us-east-1
-  
-      - name: Login to Amazon 
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v2
-
       - name: Configure kubectl
         run: |
           aws eks update-kubeconfig --region us-east-1 --name movie-pictures
@@ -92,11 +76,38 @@ jobs:
           kustomize edit set image frontend=760216051599.dkr.ecr.us-east-1.amazonaws.com/$REPO_NAME:$IMAGE_TAG
           kustomize build | kubectl apply -f -
 
-      - name: Verify Deployment Status
-        run: |
-          if kubectl rollout status deployment/frontend -n default --timeout=2m | grep -q 'deployment "frontend" successfully rolled out'; then
-            echo "Deployment succeeded."
-          else
-            echo "Deployment failed."
-            exit 1
-          fi
+
+  # deploy:
+  #   runs-on: ubuntu-latest
+  #   needs: build
+  #   steps:
+  #     - name: Configure AWS Credentials
+  #       uses: aws-actions/configure-aws-credentials@v2
+  #       with:
+  #         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  #         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  #         aws-session-token: ${{secrets.AWS_SESSION_TOKEN}}
+  #         aws-region: us-east-1
+  
+  #     - name: Login to Amazon 
+  #       id: login-ecr
+  #       uses: aws-actions/amazon-ecr-login@v2
+
+  #     - name: Configure kubectl
+  #       run: |
+  #         aws eks update-kubeconfig --region us-east-1 --name movie-pictures
+    
+  #     - name: Deploy to Kubernetes
+  #       working-directory: ./starter/frontend/k8s
+  #       run: |
+  #         kustomize edit set image frontend=760216051599.dkr.ecr.us-east-1.amazonaws.com/$REPO_NAME:$IMAGE_TAG
+  #         kustomize build | kubectl apply -f -
+
+  #     - name: Verify Deployment Status
+  #       run: |
+  #         if kubectl rollout status deployment/frontend -n default --timeout=2m | grep -q 'deployment "frontend" successfully rolled out'; then
+  #           echo "Deployment succeeded."
+  #         else
+  #           echo "Deployment failed."
+  #           exit 1
+  #         fi
