--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -9,6 +9,27 @@ on:
   workflow_dispatch:
 
 jobs:
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
+
+      - name: Install dependencies
+        run: 
+          pip install pipenv
+          pip install flake8
+        working-directory: ./starter/backend
+
+      - name: Run linter
+        run: pipenv run lint
+        working-directory: ./starter/backend
+ 
   test:
     runs-on: ubuntu-latest
     steps:
@@ -32,7 +53,7 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
-    needs: test
+    needs: [lint,test]
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -55,9 +76,9 @@ jobs:
           REPO_NAME: backend
           IMAGE_TAG: latest
         run: |
-          docker build --build-arg REACT_APP_MOVIE_API_URL=http://localhost:5000 -t 760216051599.dkr.ecr.us-east-1.amazonaws.com/$REPO_NAME:$IMAGE_TAG .
+          docker tag $REPO_NAME:$IMAGE_TAG 760216051599.dkr.ecr.us-east-1.amazonaws.com/$REPO_NAME:$IMAGE_TAG
           docker push 760216051599.dkr.ecr.us-east-1.amazonaws.com/$REPO_NAME:$IMAGE_TAG
-        working-directory: ./starter/frontend
+        working-directory: ./starter/backend
 
       - name: Configure kubectl
         run: |
@@ -66,5 +87,5 @@ jobs:
       - name: Deploy to Kubernetes
         working-directory: ./starter/backend/k8s
         run: |
-          kustomize edit set image frontend=760216051599.dkr.ecr.us-east-1.amazonaws.com/$REPO_NAME:$IMAGE_TAG
+          kustomize edit set image backend=760216051599.dkr.ecr.us-east-1.amazonaws.com/$REPO_NAME:$IMAGE_TAG
           kustomize build | kubectl apply -f -
