renaming eks cluster

--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -82,7 +82,7 @@ jobs:
 
       - name: Configure kubectl
         run: |
-          aws eks update-kubeconfig --region us-east-1 --name movie-pictures
+          aws eks update-kubeconfig --region us-east-1 --name movie-picture
     
       - name: Deploy to Kubernetes
         working-directory: ./starter/backend/k8s
