--- a/.github/workflows/frontend-cd.yml
+++ b/.github/workflows/frontend-cd.yml
@@ -82,7 +82,7 @@ jobs:
           REPO_NAME: frontend
           IMAGE_TAG: latest
         run: |
-          docker build --build-arg REACT_APP_MOVIE_API_URL=http://a0cde2525456f4242a427fdf42961f45-677962709.us-east-1.elb.amazonaws.com --tag=$REPO_NAME:$IMAGE_TAG .
+          docker build --build-arg REACT_APP_MOVIE_API_URL=${{ secrets.BACKEND_URL }} --tag=$REPO_NAME:$IMAGE_TAG .
           docker tag $REPO_NAME:$IMAGE_TAG 487216458884.dkr.ecr.us-east-1.amazonaws.com/$REPO_NAME:$IMAGE_TAG
           docker push 487216458884.dkr.ecr.us-east-1.amazonaws.com/$REPO_NAME:$IMAGE_TAG
         working-directory: ./starter/frontend
