--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -76,8 +76,7 @@ jobs:
           REPO_NAME: backend
           IMAGE_TAG: latest
         run: |
-          docker build --tag $REPO_NAME:$IMAGE_TAG .
-          docker tag $REPO_NAME:$IMAGE_TAG 487216458884.dkr.ecr.us-east-1.amazonaws.com/$REPO_NAME:$IMAGE_TAG
+          docker build -t 487216458884.dkr.ecr.us-east-1.amazonaws.com/backend:latest .
           docker push 487216458884.dkr.ecr.us-east-1.amazonaws.com/$REPO_NAME:$IMAGE_TAG
         working-directory: ./starter/backend
 
