--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -75,9 +75,11 @@ jobs:
         env:
           REPO_NAME: backend
           IMAGE_TAG: latest
+          REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         run: |
-          docker build -t 487216458884.dkr.ecr.us-east-1.amazonaws.com/backend:latest .
-          docker push 487216458884.dkr.ecr.us-east-1.amazonaws.com/$REPO_NAME:$IMAGE_TAG
+          docker build --tag $REPO_NAME:$IMAGE_TAG .
+          docker tag $REPO_NAME:$IMAGE_TAG $REGISTRY/$REPO_NAME:$IMAGE_TAG
+          docker push $REGISTRY/$REPO_NAME:$IMAGE_TAG
         working-directory: ./starter/backend
 
       - name: Configure kubectl
@@ -87,5 +89,5 @@ jobs:
       - name: Deploy to Kubernetes
         working-directory: ./starter/backend/k8s
         run: |
-          kustomize edit set image backend=487216458884.dkr.ecr.us-east-1.amazonaws.com/$REPO_NAME:$IMAGE_TAG
+          kustomize edit set image backend=$REGISTRY/$REPO_NAME:$IMAGE_TAG
           kustomize build | kubectl apply -f -
